# EGA_Code

EGAdapter_MC02-dev/EGAdapter_MC02-dev/: .cproject  .mxproject  .project  CMakeLists.txt  CMakeLists_template.txt  EGAdapter_MC02.ioc  README.md
EGAdapter_MC02-dev/EGAdapter_MC02-dev/Core/Inc/: FreeRTOSConfig.h  main.h  stm32h7xx_it.h
EGAdapter_MC02-dev/EGAdapter_MC02-dev/Core/Src/: dma.c  fdcan.c  freertos.c  gpio.c  main.c  spi.c  stm32h7xx_it.c  usart.c
EGAdapter_MC02-dev/EGAdapter_MC02-dev/User/: main.cpp  说明文档模板.md
EGAdapter_MC02-dev/EGAdapter_MC02-dev/User/Application/chassis/: chassis.h
EGAdapter_MC02-dev/EGAdapter_MC02-dev/User/Application/chassis/MecanumChassis/: mecanum_chassis.cpp  mecanum_chassis.h
EGAdapter_MC02-dev/EGAdapter_MC02-dev/User/Application/chassis/OmniChassis/: omni_chassis.cpp  omni_chassis.h
EGAdapter_MC02-dev/EGAdapter_MC02-dev/User/Application/chassis/SwerveChassis/: SwerveChassis.cpp  SwerveChassis.h
EGAdapter_MC02-dev/EGAdapter_MC02-dev/User/Application/gimbal/: gimbal.cpp  gimbal.h
EGAdapter_MC02-dev/EGAdapter_MC02-dev/User/Application/minipc/: minipc.h
EGAdapter_MC02-dev/EGAdapter_MC02-dev/User/Application/robot_state/: robot_state.cpp  robot_state.h
EGAdapter_MC02-dev/EGAdapter_MC02-dev/User/Application/shoot/: shoot.cpp  shoot.h
EGAdapter_MC02-dev/EGAdapter_MC02-dev/User/Driver/can/: driver_can.cpp  driver_can.h  driver_can.md
EGAdapter_MC02-dev/EGAdapter_MC02-dev/User/Driver/dwt/: driver_dwt.cpp  driver_dwt.h
EGAdapter_MC02-dev/EGAdapter_MC02-dev/User/Driver/spi/: driver_spi.cpp  driver_spi.h
EGAdapter_MC02-dev/EGAdapter_MC02-dev/User/Driver/usart/: driver_usart.cpp  driver_usart.h
EGAdapter_MC02-dev/EGAdapter_MC02-dev/User/Driver/usb/: driver_usb.cpp  driver_usb.h
EGAdapter_MC02-dev/EGAdapter_MC02-dev/User/Driver/utils/: bit_locker.h  loop_queue.h
EGAdapter_MC02-dev/EGAdapter_MC02-dev/User/Module/algorithm/EKF/: kalman_filter.cpp  kalman_filter.h  quaternionEKF.cpp  quaternionEKF.h
EGAdapter_MC02-dev/EGAdapter_MC02-dev/User/Module/algorithm/crc/: crc16.h  crc8.h
EGAdapter_MC02-dev/EGAdapter_MC02-dev/User/Module/algorithm/madgwick/: madgwick_filter.cpp  madgwick_filter.h
EGAdapter_MC02-dev/EGAdapter_MC02-dev/User/Module/algorithm/matrix/: matrix_f32.h
EGAdapter_MC02-dev/EGAdapter_MC02-dev/User/Module/algorithm/quaternion/: quaternion_f32.h
EGAdapter_MC02-dev/EGAdapter_MC02-dev/User/Module/controller/: controller.cpp  controller.h
EGAdapter_MC02-dev/EGAdapter_MC02-dev/User/Module/controller/PID/: PIDcontroller.cpp  PIDcontroller.h
EGAdapter_MC02-dev/EGAdapter_MC02-dev/User/Module/controller/SMC/: SMCcontroller.cpp  SMCcontroller.h
EGAdapter_MC02-dev/EGAdapter_MC02-dev/User/Module/daemon/: daemon.cpp  daemon.h
EGAdapter_MC02-dev/EGAdapter_MC02-dev/User/Module/imu/: imu.h
EGAdapter_MC02-dev/EGAdapter_MC02-dev/User/Module/imu/bmi088/: bmi088.cpp  bmi088.h  bmi088reg.h
EGAdapter_MC02-dev/EGAdapter_MC02-dev/User/Module/led/: led_on_board.cpp  led_on_board.h
EGAdapter_MC02-dev/EGAdapter_MC02-dev/User/Module/logger/: logger.cpp  logger.h
EGAdapter_MC02-dev/EGAdapter_MC02-dev/User/Module/motor/: motor.cpp  motor.h
EGAdapter_MC02-dev/EGAdapter_MC02-dev/User/Module/motor/DJImotor/: DJImotor.cpp  DJImotor.h
EGAdapter_MC02-dev/EGAdapter_MC02-dev/User/Module/motor/DMmotor/: DMmotor.cpp  DMmotor.h
EGAdapter_MC02-dev/EGAdapter_MC02-dev/User/Module/motor/LKmotor/: LKmotor.cpp  LKmotor.h
EGAdapter_MC02-dev/EGAdapter_MC02-dev/User/Module/remote/DT7/: remote_DT7.cpp  remote_DT7.h
EGAdapter_MC02-dev/EGAdapter_MC02-dev/User/Task/daemon_task/: daemon_task.cpp  daemon_task.h
EGAdapter_MC02-dev/EGAdapter_MC02-dev/User/Task/imu_task/: imu_task.cpp  imu_task.h
EGAdapter_MC02-dev/EGAdapter_MC02-dev/User/Task/motor_task/: motor_task.cpp  motor_task.h
EGAdapter_MC02-dev/EGAdapter_MC02-dev/User/Task/robot_task/: robot_task.cpp  robot_task.h
EGAdapter_MC02-dev/EGAdapter_MC02-dev/User/Task/task_manager/: task_manager.cpp  task_manager.h
(+18 files in other folders)
